# ChangeLog for net-p2p/adchpp-lan
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  25 Feb 2013; Francisco Blas Izquierdo Riera (klondike)
  adchpp-lan-9999.ebuild:
  Fix ia64

  25 Feb 2013; Francisco Blas Izquierdo Riera (klondike)
  adchpp-lan-9999.ebuild, metadata.xml:
  Add support for using system lua

*adchpp-lan-9999 (23 Feb 2013)

  23 Feb 2013; Francisco Blas Izquierdo Riera (klondike)
  +files/adchpp-lan-2.8.0-fix_config_paths.patch,
  +files/adchpp-lan-2.9.0-fix_cflags.patch, +adchpp-lan-9999.ebuild,
  +files/adchpp-lan.conf.d, +files/adchpp-lan.init.d, +files/adchpp_runner.sh,
  +metadata.xml:
  Add a live ebuild for the ADCH++ Lan fork
