@@ -3,6 +3,6 @@ AUX adchpp-lan-2.9.0-fix_cflags.patch 2402 SHA256 c0b8b3c47fd2cc64b56f0b6c1c4e48
 AUX adchpp-lan.conf.d 328 SHA256 188b92162af1a305bcfd6e5d7a66c07fe9c35ee78c3787e43d4caf71b47bcc8d SHA512 35532da12c5b7fe04b5001dc769ff617d9857ea569610b4bff87271c2c9dbf49cdf89865777ee520734238c530e638475d69f0832d589e917c2e0f807d9b3fc2 WHIRLPOOL 5d77482388b916895c05f485f022a87175f3f53e2b2bcfcbf7609bc57d2722c7fd66ee4ed79c799d21df15bfa58405b21a31a93471456e0f24785145a3438dc7
 AUX adchpp-lan.init.d 521 SHA256 12a700093fe18c8c47f54c60ae445b344759d6b5eea37b553d4dc651611059ac SHA512 8ef6b4273259009d940e131440fa8ed4e7665671dad86f6a703cbf600ac7861353f2e97914ee22f884152195b15ebd7ef782000d2e0af500a418f624ca58eaa4 WHIRLPOOL 5a3a9f6bfcbb66736087c27735c7c304fa13aa2b59669e5e90afcec21bcbbad5ec0aaf2f7456a5f4ce5c0d89602d2c39e49a2b327950aec749422dddeb45e9f9
 AUX adchpp_runner.sh 185 SHA256 3fc062bea86aa313c20315a293c0164bf52fe272c0e46d0e2753cc29b5ca89cb SHA512 60eb17ed3c3d2244bbdf77e00a413a97da82cb2045e0761c7e86951ce31b7e8de7d3470fd420a0f2b09f0f0f46ab1125f49a1f289bc8cfcf49a7436fb79f1e3c WHIRLPOOL 04b60a57145ac8a8bb835a7bd2b23293fa913c78dbdcb93c070b8590188ee930a1cc4a8fe766cba21c50d42d680db359e0d4a051dd1ac7c9b84466b3db7c2503
-EBUILD adchpp-lan-9999.ebuild 4167 SHA256 d4b0ebd4dd3349001bca7d9e9afacf4e90e92b2004ff00735b382094f655f6df SHA512 333acc1e4d9e829182df5f3b0bad38bbc05bf94c19a180df10687667db3f1afbc1866cb16233b9b9a9259f8ba6ac3c695e01d61a008e619257ffc6de5764c099 WHIRLPOOL b34c5d17e1c739d4416a835718b895309d3a1c67e74eb979ae2202f45cdb819a5ecddc387461ca767d621798a25d8ea43d380248fcba650f670fef72352bbcb9
-MISC ChangeLog 696 SHA256 583c9d8e590695fcd5da539e03f8d4f8cae0682e3eee8f68ea7559dd34edbaad SHA512 f7853f37f1cec97038c1d9b763dd86b3cdbf1441d07444d39a87948bd819e57e8fa45f2e7363350d514544c2f2f2dda114c0c0305762eaefd7c65f5d2f0bab1d WHIRLPOOL 4bf92e9500bc73c13c7975f18559ab07d821aa6dbcb03238259c09b9c5e1c3995a637901cc9d74cc5a5cd5762271747d3a2ed3ca276ccfa9da3fe0b5357408e3
-MISC metadata.xml 510 SHA256 d10306334fef6d48c13150bb46bf7616ead511fb3bf4c0b7c61aec2a609df546 SHA512 7a05c172805bede1ae8347070eeb91f2d7f5ef9de4356ab5c10921b2d5093a7e1ac6e46abf70a65906e5ac8564aa563be0b9dd8f1d301628c979d889cb1e1aa9 WHIRLPOOL 70014ba4f884657d1d59f3828ea5564ff8e2ea5a42996c62b256a20147b8b71c8a56810f4c01422f358f5e432520793a9c4e0ca4b56796db11ee4e6661a1d21e
+EBUILD adchpp-lan-9999.ebuild 4258 SHA256 8b56d3455dc3d987795a8bc403825a1c919d57e49e8ccb72d0c03d0b5ff20f64 SHA512 11d7a27767b910462befd55ff80b29a824fac3d1d768a1bfa16233b8f7fd2f996823d32940ca5e86f625ef347043f16895bd14f8918f836c38db57fbdb770aad WHIRLPOOL 57715cec8dcf76853868c66528f6f328d76887d3fa0260a231bd7c91ba5f29c36c0f80b09d6416716ffb6d9c760bde9c0177cc107b08ac9d95de0242cb121c3a
+MISC ChangeLog 848 SHA256 0b8b9f3b97f3747c3f7e4da4f156e69a95b82402a9940c83a465781dc7fc5529 SHA512 819752742ad2cc481f0eee1f262c7844ab1b9d03c88f1b75eee7bc7e3889df1376509993bac423ee6254aeb76c2afac19b16028eb084b6744c0962b6415f3b7b WHIRLPOOL 0f0a227ab3efd806f697f48bb779987e9efd8ba601b49d7f92966747173148a742f6f1da3a2b0b7cdf81bb37b82b419db6f398530b0172fea9406d149cda5f6c
+MISC metadata.xml 644 SHA256 a850bd20d7c3201bc1fb65ed02167dde40a4ed8cc15d4722ac03d632a0d222aa SHA512 b9266a517faf5fa7ae627c9f9ffdac3b6e067a429b5129fe1d750ce7d8f2fb5b41aa1f663bfedd411974b17ec82f83e8a15a92b4cdfebf82fd0d9248ff2ea5fe WHIRLPOOL fec9e7f00c88b571e43739c8aebff03d97d3aedc888355005809c68ae79de60642db489b93a7470b72064ac5aa74bd0fd70897d6a54b48f64be0c9cb1b68bce9
